--- a/app/views/round/draft.html.erb
+++ b/app/views/round/draft.html.erb
@@ -1,2 +1,3 @@
-<h1>Round#draft</h1>
-<p>Find me in app/views/round/draft.html.erb</p>
+<% for ticker in @tickers %>
+  <div><%= ticker %></div>
+<% end %>
