--- a/app/views/round/create.html.erb
+++ b/app/views/round/create.html.erb
@@ -1,13 +1,17 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col col-4">
-      <h1 class="create-form">New Round</h1>
-
-      <%= form_with url: "/round/create", method: :post do |form| %>
-      <%= form.label :name, "Round name:" %>
-      <%= form.text_field :name %>
-      <%= form.submit "Create" %>
-      <% end %>
-    </div>
+    <h1>StockDraft</h1>
   </div>
+
+  <div class="row justify-content-center">
+    <h4>New Round</h4>
+  </div>
+
+  <div class="row justify-content-center">
+    <%= form_with url: "/round/create", method: :post do |form| %>
+      <%= form.text_field :name, placeholder: "Round name" %>
+      <button type="submit" class="btn btn-primary">Create</button>
+    <% end %>
+  </div>
+
 </div>
