--- a/app/views/round/draft.html.erb
+++ b/app/views/round/draft.html.erb
@@ -1,3 +1,16 @@
+<% if not @users.map{ |u| u.session_id }.include? session.id.to_s %>
+  <%= form_with data: { reflex: "submit->DraftReflex#newUser" } do |form| %>
+    <div>
+      <%= form.label :name %>
+      <%= form.text_field :name %>
+    </div>
+
+    <%= form.submit %>
+  <% end %>
+<% end %>
 <% for ticker in @tickers %>
   <div><%= ticker %></div>
+<% end %>
+<% for user in @users %>
+  <div><%= user.display_name %></div>
 <% end %>
