--- a/app/views/round/draft.html.erb
+++ b/app/views/round/draft.html.erb
@@ -25,15 +25,7 @@
     <h3>Available</h3>
   </div>
 
-  <div class="row justify-content-center">
-    <% for ticker in @all_tickers %>
-      <div class="card bg-primary">
-        <div class="card-body">
-          <p class="card-title"><%= ticker %></p>
-        </div>
-      </div>
-    <% end %>
-  </div>
+  <%= render "stock_selection"%>
 
   <div class="row">
     <h3>Drafted</h3>
