sets up draft channel

--- a/app/views/round/_stock_selection.erb
+++ b/app/views/round/_stock_selection.erb
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div id="stock-selection" class="row justify-content-center">
   <% for ticker in @all_tickers %>
     <div class="card bg-primary">
       <div class="card-body">
