--- a/app/views/round/show.html.erb
+++ b/app/views/round/show.html.erb
@@ -4,4 +4,16 @@
 
     <%= line_chart [{name: "GOOG", data: @goog_time_series}, {name: "AAPL", data: @aapl_time_series}] %>
   </div>
+  <div class="row">
+    <% for user in @users %>
+      <div class="card">
+        <div class="card-body">
+          <p class="card-title"><%= user.display_name %></p>
+          <% for draft in @drafts.select{|d| d.user_id == user.user_id} %>
+            <p><%= draft.symbol %></p>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
