--- a/app/views/round/show.html.erb
+++ b/app/views/round/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <h1><% @round.display_name%></h1>
 
-    <%= line_chart [{name: "GOOG", data: @goog_time_series}, {name: "AAPL", data: @aapl_time_series}] %>
+    <%= line_chart @chart_data, min: @mins.min, max: @maxes.max, library: {pointRadius: 0}  %>
   </div>
   <div class="row">
     <% for user in @users %>
