Adding info on the home page

--- a/app/views/round/create.html.erb
+++ b/app/views/round/create.html.erb
@@ -2,7 +2,10 @@
   <div class="row justify-content-center">
     <h1>StockDraft</h1>
   </div>
-
+  <div>
+  <h4 class = "text-center"> Draft a team of stocks and compete with your friends to find out who is the ultimate investor. </h4>
+  </div>
+  <br>
   <div class="row justify-content-center">
     <h4>New Round</h4>
   </div>
@@ -13,5 +16,44 @@
       <button type="submit" class="btn btn-primary">Create</button>
     <% end %>
   </div>
+ <br>
+<div class="accordion2" id="accordion">
 
+<div class="card">
+<div class="card-header" id="headingOne">
+<h5 class="mb-0">
+<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+How does DraftStock work?
+</button>
+</h5>
+</div>
+
+<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+<div class="card-body">
+<ul class="list-group">
+<li class="list-group-item">Step 1: Create a group name</li>
+<li class="list-group-item">Step 2: Invite your friends/enemies/neighbor</li>
+<li class="list-group-item">Step 3: Begin drafting the stocks you believe will have the best performance this week!</li>
+<li class="list-group-item">Step 4: Watch your stock performance throughout the week and evaluate your day to day performance</li>
+<li class="list-group-item">Step 5: Profit?!!?</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="card">
+<div class="card-header" id="headingTwo">
+<h5 class="mb-0">
+<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+  Does it cost any money to join?
+</button>
+</h5>
+</div>
+<div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
+<div class="card-body">
+Nope StockDraft is a free service where users create groups to draft stocks with friends and compare weekly stock pick performances.
+</div>
+</div>
+</div>
+
+</div>
 </div>
