--- a/app/views/round/show.html.erb
+++ b/app/views/round/show.html.erb
@@ -6,14 +6,16 @@
   </div>
   <div class="row">
     <% for user in @users %>
-      <div class="card">
-        <div class="card-body">
-          <p class="card-title"><%= user.display_name %></p>
-          <% for draft in @drafts.select{|d| d.user_id == user.user_id} %>
-            <p><%= draft.symbol %></p>
-          <% end %>
+      <a href="<%= request.env['PATH_INFO'] %>?portfolio=<%= user.user_id %>">
+        <div class="card">
+          <div class="card-body">
+            <p class="card-title"><%= user.display_name %></p>
+            <% for draft in @drafts.select{|d| d.user_id == user.user_id} %>
+              <p><%= draft.symbol %></p>
+            <% end %>
+          </div>
         </div>
-      </div>
+      </a>
     <% end %>
   </div>
 </div>
