--- a/app/views/round/create.html.erb
+++ b/app/views/round/create.html.erb
@@ -18,24 +18,22 @@
   </div>
  <br>
 <div class="accordion2" id="accordion">
-
 <div class="card">
 <div class="card-header" id="headingOne">
 <h5 class="mb-0">
 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-How does DraftStock work?
+How does StockDraft work?
 </button>
 </h5>
 </div>
-
 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
 <div class="card-body">
 <ul class="list-group">
-<li class="list-group-item">Step 1: Create a group name</li>
-<li class="list-group-item">Step 2: Invite your friends/enemies/neighbor</li>
-<li class="list-group-item">Step 3: Begin drafting the stocks you believe will have the best performance this week!</li>
-<li class="list-group-item">Step 4: Watch your stock performance throughout the week and evaluate your day to day performance</li>
-<li class="list-group-item">Step 5: Profit?!!?</li>
+    <li class="list-group-item">Step 1: Create a group name</li>
+    <li class="list-group-item">Step 2: Invite your friends/enemies/neighbor</li>
+    <li class="list-group-item">Step 3: Begin drafting the stocks you believe will have the best performance this week!</li>
+    <li class="list-group-item">Step 4: Watch your stock performance throughout the week and evaluate your day to day performance</li>
+    <li class="list-group-item">Step 5: Profit?!!?</li>
 </ul>
 </div>
 </div>
@@ -55,5 +53,3 @@ Nope StockDraft is a free service where users create groups to draft stocks with
 </div>
 </div>
 
-</div>
-</div>
