--- a/app/views/round/show.html.erb
+++ b/app/views/round/show.html.erb
@@ -1,21 +1,29 @@
 <div class="container">
-  <div class="row">
-    <h1><% @round.display_name%></h1>
-
-    <%= line_chart @chart_data, min: @mins.min, max: @maxes.max, height: "600px", library: {pointRadius: 0} %>
+  <div class="row justify-content-center">
+    <h1 >Dashboard: <% @round.display_name %></h1>
   </div>
   <div class="row">
-    <% for user in @users %>
-      <a href="<%= request.env['PATH_INFO'] %>?portfolio=<%= user.user_id %>">
-        <div class="card">
-          <div class="card-body">
-            <p class="card-title"><%= user.display_name %></p>
-            <% for draft in @drafts.select{|d| d.user_id == user.user_id} %>
-              <p><%= draft.symbol %></p>
-            <% end %>
-          </div>
-        </div>
-      </a>
-    <% end %>
+    <div class="col col-8">
+      <%= line_chart @chart_data, min: @mins.min, max: @maxes.max, height: "600px", library: {pointRadius: 0} %>
+    </div>
+    <div class="col col-4">
+      <table class="table table-hover">
+        <thead class="table-primary">
+          <th scope="col">Place</th>
+          <th scope="col">User</th>
+          <th scope="col">Portfolio Value</th>
+        </thead>
+
+        <tbody>
+          <% @portfolios.sort_by{|p| p[:value]}.each_with_index do |portfolio, index| %>
+            <tr onclick="window.location.search += '?portfolio=<%= portfolio[:user].user_id %>'">
+              <td><%= index + 1 %></td>
+              <td><%= portfolio[:user].display_name %></td>
+              <td><%= portfolio[:value] %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
