standardizes normalization, adds link back to main dashboard

--- a/app/views/round/show.html.erb
+++ b/app/views/round/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <h1 >Dashboard: <% @round.display_name %></h1>
+    <h1 onclick="window.location.search =''">Dashboard: <% @round.round_id %></h1>
   </div>
   <div class="row">
     <div class="col col-8">
@@ -16,7 +16,7 @@
 
         <tbody>
           <% @portfolios_by_user.sort_by{|u, p| p.values.last}.each_with_index do |user_and_portfolio, index| %>
-            <tr onclick="window.location.search += '?portfolio=<%= user_and_portfolio[0].user_id %>'">
+            <tr onclick="window.location.search += '&portfolio=<%= user_and_portfolio[0].user_id %>'">
               <td><%= index + 1 %></td>
               <td><%= user_and_portfolio[0].display_name %></td>
               <td><%= user_and_portfolio[1].values.last %></td>
