--- a/app/views/round/draft.html.erb
+++ b/app/views/round/draft.html.erb
@@ -26,35 +26,7 @@
     <h3>Available</h3>
   </div>
 
-  <%= render "stock_selection"%>
-
-  <div class="row">
-    <h3>Drafted</h3>
-  </div>
-
-  <div class="row">
-    <table class="table table-hover table-drafted">
-      <thead class="table-primary">
-        <th scope="col">#</th>
-        <th scope="col">Stock</th>
-        <th scope="col">User</th>
-      </thead>
-
-      <tbody>
-        <% for drafts in @drafted_tickers %>
-          <tr>
-            <%# TODO(emilia): change the number to 
-                a) draft has a property with the pick number or 
-                b) drafted tickers stored in order, print the loop number %>
-            <td>1.</td>
-            <td><%= drafts.symbol %></td>
-            <td><%= drafts.user_id %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  
+  <%= render "stock_selection", :drafted_tickers => @drafted_tickers, :all_tickers => @all_tickers, :round => @round %>
 
 </div>
 
