--- a/app/views/round/_stock_selection.erb
+++ b/app/views/round/_stock_selection.erb
@@ -1,16 +1,21 @@
 <div id="stock-selection">
   <div class="row justify-content-center">
-    <% for ticker in all_tickers %>
-      <% if !@drafted_tickers.map{|t| t.symbol}.include? ticker %>
-      <div class="card bg-primary">
-        <div class="card-body" data-symbol="<%=ticker%>" data-round_id="<%=@round.round_id%>" data-reflex="click->DraftReflex#pick_stock">
-          <img src=<%= TickerInfo.get_logo_url(ticker) %> style="max-width:100px;max-height:100px;">
-          <p class="card-title"><%= ticker %></p>
-          <p class="card-company-name"><%= TickerInfo.get_company_name(ticker) %></p>
+    <div class="col col-10">
+      <% for ticker in all_tickers %>
+        <% if !@drafted_tickers.map{|t| t.symbol}.include? ticker %>
+        <div class="card bg-primary">
+          <div class="card-body" data-symbol="<%=ticker%>" data-round_id="<%=@round.round_id%>" data-reflex="click->DraftReflex#pick_stock">
+            <img src=<%= TickerInfo.get_logo_url(ticker) %> style="max-width:100px;max-height:100px;">
+            <p class="card-title"><%= ticker %></p>
+            <p class="card-company-name"><%= TickerInfo.get_company_name(ticker) %></p>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+    <div class="col col-2">
+      <%# TODO (alex) add draft order %>
+    </div>
   </div>
 
   <div class="row">
