--- a/app/views/round/draft.html.erb
+++ b/app/views/round/draft.html.erb
@@ -22,7 +22,7 @@
     <%#  TODO(emilia): else show> `it's ___ turn` %>
   <% end %>
 
-  <%= render "stock_selection", :drafted_tickers => @drafted_tickers, :all_tickers => @all_tickers, :round => @round %>
+  <%= render "stock_selection", :drafted_tickers => @drafted_tickers, :all_tickers => @all_tickers, :round => @round, :users => @users %>
 
 </div>
 
